# password-manager

./: biome.json  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  storage.rs  types.rs  vault.rs  vault_commands.rs
src/components/: add-entry.tsx  entry-card.tsx  lock-vault.tsx
src/components/ui/: dropdown-menu.tsx
src/layout/: entry-list.tsx  password-prompt.tsx
src/lib/: stronghold.ts  vault.ts
src/lib/jotai/: atoms.ts
src/lib/jotai/state/: entries-atoms.ts  password-prompt-atoms.ts  stronghold-atoms.ts
src/providers/: root-provider.tsx
