[package]
name = "password-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "password_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-stronghold = "2"
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
zeroize = "1.8.1"
getrandom = "0.2.16"
uuid = { version = "1.18.0", features = ["v4"] }
tauri-plugin-store = "2"
rmp-serde = "1.3.0"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
anyhow-tauri = "1.0.0"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
